# Projekt

bom-os-tauri/: README.md  index.html  package.json  tsconfig.json
bom-os-tauri/pyserver/: ai_logic.py  app.py  chart_widget.py  feedback_dialog.py  forecasting_logic.py  main.py  pandas_model.py  requirements.txt  style.qss  test_logic.py  worker.py
bom-os-tauri/pyserver/common/: data_processing.py
bom-os-tauri/src/: App.tsx
bom-os-tauri/src-tauri/: Cargo.toml  tauri.conf.json
bom-os-tauri/src-tauri/src/: main.rs
