
[package]
name = "bom-os-tauri"
version = "0.1.0"
description = "BOM OS Tauri App"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
